--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
+.navbar {
+  background-color: #f2f2f2;
+  overflow: hidden;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #666;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
 html {
-  height: 100%;
-  width: 100%;
+  size: 100%
 }
